# Finance_Stock_Database

./: README.md  aggregator.py  initialiser.py  main.py  pyproject.toml  querier.py  requirements.txt  specific.py  stock_gui.py  test.py  tickers.csv
