[project]
name = "finance-stock-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "matplotlib>=3.10.7",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tkcalendar>=1.6.1",
    "tksheet>=7.5.19",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
